WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190721
[PSON] SuspendedPages do not report meaningful domains in Activity Monitor
https://bugs.webkit.org/show_bug.cgi?id=190721
Summary
[PSON] SuspendedPages do not report meaningful domains in Activity Monitor
Chris Dumez
Reported
2018-10-18 09:40:02 PDT
SuspendedPages do not report meaningful domains in Activity Monitor, which makes debugging harder.
Attachments
Patch
(2.58 KB, patch)
2018-10-18 09:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.45 KB, patch)
2018-10-18 13:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-10-18 09:40:16 PDT
<
rdar://problem/45059699
>
Chris Dumez
Comment 2
2018-10-18 09:41:46 PDT
Created
attachment 352701
[details]
Patch
Alex Christensen
Comment 3
2018-10-18 12:24:41 PDT
Comment on
attachment 352701
[details]
Patch r=me. Can't this be tested?
Chris Dumez
Comment 4
2018-10-18 12:36:52 PDT
(In reply to Alex Christensen from
comment #3
)
> Comment on
attachment 352701
[details]
> Patch > > r=me. Can't this be tested?
It will need some infrastructure to ask a WebProcess what origins it reports but I think it is doable. Will look into it now.
Chris Dumez
Comment 5
2018-10-18 13:30:33 PDT
Created
attachment 352723
[details]
Patch
Chris Dumez
Comment 6
2018-10-18 13:30:59 PDT
Requesting review again now that I added API testing.
Alex Christensen
Comment 7
2018-10-18 13:54:42 PDT
Comment on
attachment 352723
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352723&action=review
> Source/WebKit/UIProcess/WebProcessProxy.cpp:1410 > + sendSync(Messages::WebProcess::GetActivePagesOriginsForTesting(), Messages::WebProcess::GetActivePagesOriginsForTesting::Reply(activeDomains), 0);
tsk tsk tsk, this is what completion handlers are for.
> Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:530 > + [handler addMappingFromURLString:@"pson://www.google.com/main.html" toData:testBytes];
Is this a URL we can use for testing?
Chris Dumez
Comment 8
2018-10-18 13:56:34 PDT
Comment on
attachment 352723
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352723&action=review
>> Source/WebKit/UIProcess/WebProcessProxy.cpp:1410 >> + sendSync(Messages::WebProcess::GetActivePagesOriginsForTesting(), Messages::WebProcess::GetActivePagesOriginsForTesting::Reply(activeDomains), 0); > > tsk tsk tsk, this is what completion handlers are for.
This is only used for testing. If I make this async, then I need to IPC messages right? (one in each direction).
>> Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:530 >> + [handler addMappingFromURLString:@"pson://www.google.com/main.html" toData:testBytes]; > > Is this a URL we can use for testing?
This is using PSON protocol. We use proper domains names in PSON tests so that process-swap on cross-site navigation actually triggers.
Chris Dumez
Comment 9
2018-10-18 13:57:57 PDT
Comment on
attachment 352723
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352723&action=review
>>> Source/WebKit/UIProcess/WebProcessProxy.cpp:1410 >>> + sendSync(Messages::WebProcess::GetActivePagesOriginsForTesting(), Messages::WebProcess::GetActivePagesOriginsForTesting::Reply(activeDomains), 0); >> >> tsk tsk tsk, this is what completion handlers are for. > > This is only used for testing. If I make this async, then I need to IPC messages right? (one in each direction).
s/to/two/
WebKit Commit Bot
Comment 10
2018-10-18 14:41:48 PDT
Comment on
attachment 352723
[details]
Patch Clearing flags on attachment: 352723 Committed
r237267
: <
https://trac.webkit.org/changeset/237267
>
WebKit Commit Bot
Comment 11
2018-10-18 14:41:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug