[PSON] SuspendedPages do not report meaningful domains in Activity Monitor https://bugs.webkit.org/show_bug.cgi?id=190721 <rdar://problem/45059699>

Reviewed by Alex Christensen.

Source/WebKit:

SuspendedPages do not report meaningful domains in Activity Monitor, which makes
debugging harder.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::origin):
(WebKit::WebProcess::updateActivePages):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:


Canonical link: https://commits.webkit.org/205632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237267 268f45cc-cd09-0410-ab3c-d52691b4dbfc