Source/WebKit/UIProcess/WebProcessPool.cpp
@@ -1325,6 +1325,15 @@ ProcessID WebProcessPool::networkProcessIdentifier()
     return m_networkProcess->processIdentifier();
 }
 
+Vector<String> WebProcessPool::activePagesOriginsInWebProcessForTesting(ProcessID pid)
+{
+    for (auto& process : m_processes) {
+        if (process->processIdentifier() == pid)
+            return process->activePagesDomainsForTesting();
+    }
+    return { };
+}
+
 void WebProcessPool::setAlwaysUsesComplexTextCodePath(bool alwaysUseComplexText)
 {
     m_alwaysUsesComplexTextCodePath = alwaysUseComplexText;
