Source/WebKit/UIProcess/WebProcessProxy.h
@@ -121,6 +121,8 @@ public:
     unsigned pageCount() const { return m_pageMap.size(); }
     unsigned visiblePageCount() const { return m_visiblePageCounter.value(); }
 
+    Vector<String> activePagesDomainsForTesting(); // This is what is reported to ActivityMonitor.
+
     virtual bool isServiceWorkerProcess() const { return false; }
 
     void addVisitedLinkStore(VisitedLinkStore&);
