Source/WebKit/WebProcess/WebProcess.h
@@ -192,6 +192,7 @@ public:
 #endif
 
     void updateActivePages();
+    void getActivePagesOriginsForTesting(Vector<String>&);
     void pageActivityStateDidChange(uint64_t pageID, OptionSet<WebCore::ActivityState::Flag> changed);
 
     void setHiddenPageDOMTimerThrottlingIncreaseLimit(int milliseconds);
